Rename backend folder and move Dockerfile into it

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,10 @@
 version: "3"
 
 services:
-  web:
+  flask:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: flask_app/Dockerfile
     volumes:
       - ".:/app"
     ports:
