Add react app to docker-compose and update backend's Dockerfile

--- a/flask_app/Dockerfile
+++ b/flask_app/Dockerfile
@@ -1,9 +1,9 @@
 FROM python:3.8.6-alpine
 
-ADD . /app
-WORKDIR /app
+ADD . /
+WORKDIR /
 
-ENV FLASK_APP=backend/app.py
+ENV FLASK_APP=flask_app/app.py
 ENV FLASK_RUN_HOST=0.0.0.0
 
 EXPOSE 5000
@@ -12,7 +12,7 @@ EXPOSE 5000
 RUN apk update && \
     apk add --virtual build-deps gcc python3-dev musl-dev && \
     apk add jpeg-dev zlib-dev libjpeg && \
-    pip3 install -r requirements.txt && \
+    pip3 install -r flask_app/requirements.txt && \
     apk del build-deps
 
-CMD python backend/app.py
+CMD python flask_app/app.py
