--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,3 +9,15 @@ services:
       - ".:/app"
     ports:
       - 5000:5000
+
+  react:
+    build:
+      context: .
+      dockerfile: react_app/Dockerfile
+    volumes:
+      - '.:/app'
+      - '/app/node_modules'
+    ports:
+      - 3000:3000
+    environment:
+      - CHOKIDAR_USEPOLLING=true
